<?xml version="1.0" encoding="utf-8"?>
<!--<android.support.v4.widget.NestedScrollView-->
<!--xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--android:layout_width="fill_parent"-->
<!--android:layout_height="fill_parent">-->

<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/activity_panduan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:popupTheme="@style/AppTheme3"
        tools:context=".Activity.Panduan">

    <!--<LinearLayout
            android:id="@+id/titleHeader"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

        <TextView
                android:id="@+id/titleBar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/colorOrangetua"
                android:gravity="center"
                android:text="Panduan Pengguna"
                android:textSize="25dp"
                android:textStyle="bold"
                android:textColor="@color/colorNaturalWhite"/>

    </LinearLayout>-->

    <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_tabPanduan"
            android:minHeight="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:gravity="center"
            android:theme="@style/AppTheme.AppBarOverlay"/>

    <TextView
            android:id="@+id/titleBar"
            android:layout_below="@+id/toolbar_tabPanduan"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:width="@android:dimen/thumbnail_width"
            android:gravity="center"
            android:textStyle="bold"/>

    <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/toolbar_tabPanduan"
    android:layout_marginTop="15dp">


        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <LinearLayout
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:background="@color/colorDarkGrey"
                    android:elevation="2dp"
                    android:padding="2dp">

                <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:id="@+id/imgHome"
                        android:layout_marginVertical="10dp"
                        android:layout_marginHorizontal="12dp"
                        android:src="@drawable/ic_app"
                />

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_gravity="center">

                    <TextView
                            android:id="@+id/tv_namaHome"
                            android:layout_width="237dp"
                            android:layout_height="wrap_content"
                            android:textSize="20dp"
                            android:textStyle="bold"
                            android:text="@string/titleMenuUtama"
                            android:textColor="@color/colorNaturalWhite"/>
                </LinearLayout>
            </LinearLayout>

            <me.biubiubiu.justifytext.library.JustifyTextView
                    android:id="@+id/desHalUtama"
                    android:layout_below="@+id/titleMenuUtama"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/panDesUtama"
                    android:textSize="14dp"
                    android:textColor="@color/colorBlack"
                    android:layout_marginHorizontal="15dp"/>

            <LinearLayout
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:background="@color/colorDarkGrey"
                    android:elevation="2dp"
                    android:padding="2dp">

                <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginVertical="10dp"
                        android:layout_marginHorizontal="12dp"
                        android:src="@drawable/ic_hotel"
                />

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_gravity="center">

                    <TextView
                            android:id="@+id/tv_namaHotel"
                            android:layout_width="216dp"
                            android:layout_height="wrap_content"
                            android:textSize="20dp"
                            android:textStyle="bold"
                            android:text="@string/titleMenuHotel"
                            android:textColor="@color/colorNaturalWhite"/>
                </LinearLayout>
            </LinearLayout>

            <me.biubiubiu.justifytext.library.JustifyTextView
                    android:id="@+id/desPanHotel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/panMenuHotel"
                    android:layout_marginTop="10dp"
                    android:layout_marginHorizontal="15dp"
                    android:text="@string/panDesHotel"
                    android:textSize="14dp"
                    android:textColor="@color/colorBlack"/>

            <LinearLayout
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:background="@color/colorDarkGrey"
                    android:elevation="2dp"
                    android:padding="2dp">

                <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginVertical="10dp"
                        android:layout_marginHorizontal="12dp"
                        android:src="@drawable/ic_restoran"
                />

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_gravity="center">

                    <TextView
                            android:layout_width="245dp"
                            android:layout_height="wrap_content"
                            android:textSize="20dp"
                            android:textStyle="bold"
                            android:text="@string/titleMenuKuliner"
                            android:textColor="@color/colorNaturalWhite"/>
                </LinearLayout>
            </LinearLayout>

            <me.biubiubiu.justifytext.library.JustifyTextView
                    android:id="@+id/desPanKuliner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/panMenuKuliner"
                    android:layout_marginTop="10dp"
                    android:layout_marginHorizontal="15dp"
                    android:text="@string/panDesKuliner"
                    android:textSize="14dp"
                    android:textColor="@color/colorBlack"/>

            <LinearLayout
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:background="@color/colorDarkGrey"
                    android:elevation="2dp"
                    android:padding="2dp">

                <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginVertical="10dp"
                        android:layout_marginHorizontal="12dp"
                        android:src="@drawable/ic_wisata"
                />

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_gravity="center">

                    <TextView
                            android:layout_width="245dp"
                            android:layout_height="wrap_content"
                            android:textSize="20dp"
                            android:textStyle="bold"
                            android:text="@string/titleMenuWisata"
                            android:textColor="@color/colorNaturalWhite"/>
                </LinearLayout>
            </LinearLayout>

            <me.biubiubiu.justifytext.library.JustifyTextView
                    android:id="@+id/desPanWisata"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/panMenuWisata"
                    android:layout_marginTop="10dp"
                    android:layout_marginHorizontal="15dp"
                    android:text="@string/panDesWisata"
                    android:textSize="14dp"
                    android:textColor="@color/colorBlack"
                    android:layout_marginBottom="10dp"/>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
